<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4a4a4a">

    <TextView
        android:id="@+id/playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/playlist_name" />

    <LinearLayout
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/playlist_name"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/music_library"
            android:textAlignment="center"
            android:textSize="@dimen/sp_16" />

        <!-- Playlist button -->

        <Button
            android:id="@+id/playlist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/now_playing" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/label" />

</RelativeLayout>